update index.html melhora de responsividade

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="icon-menu-name">
             <div class="icon-name">
                 <div><img src="./img/flowers.svg" alt=""></div>
-                <div><a href="#">Jenny Wilson</a></div>
+                <div><a class="white-text" href="#">Jenny Wilson</a></div>
             </div>
             <div>
                 <img id="sandwich" src="./img/icons/menu-hamburger.svg"></img>
@@ -21,23 +21,25 @@
         </div>
         <nav id="nav-bar">
             <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">About me</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="white-text" href="">Portfolio</a></li>
+                <li><a class="white-text" href="">About me</a></li>
+                <li><a class="white-text" href="">Contacts</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <div>
-                <h1>Hi! I am an Illustrator and Web-designer</h1>
-                <p>I use Illustrator, Figma, Photoshop in my work to make good designs. I am open to new projects and very passionate about my job!</p>
+                <h1 class="white-text">Hi! I am an Illustrator and Web-designer</h1>
+                <p class="white-text">I use Illustrator, Figma, Photoshop in my work to make good designs. I am open to new projects and very passionate about my job!</p>
                 <div class="view-portfolio">
-                    <a href="">View Portfolio</a>
+                    <a class="white-text" href="">View Portfolio</a>
                 </div>
             </div>
             <div class="girl-circle">
-                <img src="./img/girl.svg" alt="">
+                <div class="girl-inner-circle">
+                    <img src="./img/girl.svg" alt="">
+                </div>
             </div>
         </section>
     </main>
