update primeiros efeitos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Jenny Wilson</title>
 </head>
 <body>
+    <div class="barra-brilho"></div>
     <header>
         <div class="icon-menu-name">
             <div class="icon-name">
